@@ -1,3 +1,7 @@
+* #948 Accept ascii passphrases for WEP networks. '$:1a2b3c4d' for hex keys,
+  's:my passphrase' for 5 or 13 characters ascii passphrases, or just the plain
+  key for ascii passphrases of any other length. (tomeu)
+
 Snapshot 5a595ea04e
 
 * Save state of volume when shutdown and reboot fix for #3652 (erikos)
